Closed Bug 69365 Opened 24 years ago Closed 24 years ago

Reply-All not functioning correctly

Categories

(MailNews Core :: Composition, defect, P1)

x86
Windows 98
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9

People

(Reporter: tpringle, Assigned: pollmann)

References

Details

(Whiteboard: [nsbeta1+])

Attachments

(2 files)

Build ID 2001021304

Steps to reproduce:

1) Launch N6
2) Open Mail
3) Select message with multiple recipients 
4) Choose Reply-All from the main toolbar
5) Send

Result:

All recipients appear properly in the composed reply, however not all receive
your mail.  This can be confirmed in your sent folder.

Expected Result:

All recipients as appear in message compose should receive your mail, and this
should be reflected in your sent mail.

This is very scary and makes our product basically unusable.  Please come check
my machine if you'd like to see an example of this.
QA Contact: esther → sheelar
very very very bad.Nominating nsbeta1
Status: NEW → ASSIGNED
Keywords: nsbeta1
*** Bug 69371 has been marked as a duplicate of this bug. ***
agreed. marking nsbeta1+
Priority: -- → P1
Whiteboard: [nsbeta1+]
Target Milestone: --- → mozilla0.9
This has been broken between 2001-01-05-12 and 2001-01-06-04. Still investigating...
There is a good chance this is related to optimization work Pollmann did on
nsGfxTextControlFrame2::SaveState. I'll try to back him up...
ok, this is a regression of the fix for bug 62713. If I remove the test in
nsGfxTextControlFrame2::SaveState at line 3189
(http://lxr.mozilla.org/mozilla/source/layout/html/forms/src/nsGfxTextControlFrame2.cpp#3189),
we are not loosing anymore recipients.
cc'ing jst and vidur as they where the reviewers of pollman's checkin.
Hmm...I'm not sure I understand the correlation between the Reply-All problem 
and pollmann's fix. JFD's backout of the text input part of pollmann's 
optimization looks reasonably safe as a temporary fix. I believe pollmann gets 
back into town tomorrow, but if there's urgency, it can go in.

I'd recommend doing some minimal testing with text inputs on a page and history 
navigation. Specifically, go to the Bugzilla query page, type values into one 
ore more of the text fields, submit and then go back to the query page in 
history to confirm that the text values have been preserved.
good catch, text fields in bugzilla query page remember their value when I press
back. But when I tried to add a comment and a dummy keyword (qweqwe) in a bug, I
get the error page, if I press back, I lost the comment!!! Therefore I cannot
check it my patch either :-( I think I will let Eric figure out the real solution...
Oops!  My testing totally missed this.  I have an idea of a fix to this problem
- should have enough of it done to test tonight - I'll attach a patch then!
reassign to pollmann
it does happen with forwarding , i tried to forward a message to 7 recipients,
when i looked into Sent folder only 3 of them were indicated as addressees ,
other four were dropped from the list
reassign
Assignee: ducarroz → pollmann
Status: ASSIGNED → NEW
if that affect as well forward, that should affect also new message. Marina, can
you do a test please. Thanks
commercial buildid:  2001-02-19-09 on win98
I composed and sent a new mail to test accounts for 7 recipients and all of them
received the email.  But they were all addressed as 'To'. So sending a new mail
to 7 recipients worked for me.  I see all the 7 recipients listed in the sent
folder and checked each account to make sure the mail was received.   
buildid: 2001-02-19-09 on win98
Reply all is still not working out of 7 recipients only 3 are listed in the sent
folder and mail was received by only 3 out of 7. 
Tried forwarding too and it worked from the above build.
the problem with this fix is that forms field won't remember their value. See my
previous comment about it. ANyway, it's better that loosing recipients while
sending a message. R=ducarroz
Since this is taking a bit longer than expected, I'll check in a temporary fix.
 See temp fix 2.  AFAIK, this is logically equivalent to Jean-Francois's earlier
 patch.  I've tested mine against the exact same actions (entering bogus keyword
qweqwe, then attaching a comment, submitting bug report, getting error page,
going back) and we are not loosing history state.  It also fixes the Reply-All /
Forward bug.

I'll try to get this in as soon as possible, and continue working on a better
solution.
Status: NEW → ASSIGNED
oh, maybe something else was wrong in my tree. Anyway, thanks for taking care of
this...
sr=vidur for the temporary fix. 
Fix checked in.  Thanks all for the quick responses!

To verify, reply-all to a message that was sent to five or more email accounts.
 Verify that the message was received at all of the accounts.

I'll open a new bug for the real fix, which will be a more significant change.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
More complete solution is bug 69738.
verified on all
buildid: 2001022606 on win98
         2001022608 on mac
         2001022608 on linux
This problem is fixed.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: