Bug 69365: Fix mail reply-all by reverting pres-state optimizations r=ducarroz@netscape.com, sr=jst@netscape.com,vidur@netscape.com